--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<!-- Replace play.myserver.net with your IP address -->
 			<!-- Do it for both examples below -->
 			<!-- Please set both your IP and port -->
-			<p>Venha jogar conosco, <span class="ip"><b>jogar.megacraft.com.br</b></span> e com mais outros
+			<p>Jogue conosco, <span class="ip"><b>jogar.megacraft.com.br</b></span> e mais outros
 			<span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.	</p>	
         	<p><b>MegaCraft</b> Atualmente está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b></p>
 		</div>
