--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<a href="http://discord.megacraft.com.br" target="_blank" class="item forums">
 			<div>
 				<img src="img/discord.png" alt="Minecraft forums icon" class="img">
-				<p class="subtitle">entre no discord!</p>
+				<p class="subtitle">entre no nosso discord!</p>
 				<p class="title">Discord</p>
 			</div>
 			</a>
@@ -35,7 +35,7 @@
 			<a href="#" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
-				<p class="subtitle">compre seu vip!</p>
+				<p class="subtitle">compre o seu vip!</p>
 				<p class="title">Loja</p>
 			</div>
 			</a>
