--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<!-- Please set both your IP and port -->
 			<p>Junte-se a nós, <span class="ip"><b>jogar.megacraft.com.br</b></span> e mais outros
 			<span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.	</p>	
-        	<p>Copyright © 2020 <b>MegaCraft</b> Servidor atualmente está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b></p>
+        	<p><b>MegaCraft</b> Servidor atualmente está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b></p>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
