--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html>
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
-	<title>Mega Craft Servidor - Site Oficial</title>
-	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
+	<title>Mega Craft - Site Oficial</title>
+	<meta name="description" content="Mega Craft é um novo e incrível servidor Survival de Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta property="og:title" content="Mega Craft Servidor - Site Oficial">
-	<meta property="og:site_name" content="Mega Craft Servidor">
-	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
+	<meta property="og:site_name" content="Mega Craft">
+	<meta property="og:description" content="Mega Craft é um novo e incrível servidor Survival de Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="css/jquery.modalLink.min.css" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter@1.1.1/dist/mc-player-counter.min.js"></script>
 </head>
@@ -20,27 +21,27 @@
 		<div class="logo">
 			<!-- In the img folder, upload your logo -->
 			<!-- Make sure you name it 'logo.png' -->
-			<img src="img/logo.png" alt="Mega Craft Server">
+			<img src="img/logo.png" alt="Mega Craft">
 		</div>
 		<div class="items">
 			<!-- Replace # with your forum URL-->
 			<a href="http://discord.megacraft.com.br" target="_blank" class="item forums">
 			<div>
 				<img src="img/discord.png" alt="Minecraft forums icon" class="img">
-				<p class="subtitle">entre no nosso discord!</p>
+				<p class="subtitle">entre no discord!</p>
 				<p class="title">Discord</p>
 			</div>
 			</a>
 			<!-- Replace # with your store URL -->
-			<a href="#" class="item store">
+			<a href="loja.html" class="modal-link" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
-				<p class="subtitle">compre o seu vip!</p>
+				<p class="subtitle">compre seu vip!</p>
 				<p class="title">Loja</p>
 			</div>
 			</a>
 			<!-- Replace # with your vote URL -->
-			<a href="#" class="item vote" onclick="openfunc()">
+			<a href="#" class="item vote">
 			<div>
 				<img src="img/vote.png" alt="Minecraft voting icon" class="img">
 				<p class="subtitle">vote no servidor!</p>
@@ -54,11 +55,13 @@
 			<!-- Please set both your IP and port -->
 			<p>Junte-se a nós, <span class="ip"><b>jogar.megacraft.com.br</b></span> e mais outros
 			<span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.	</p>	
-        	<p><b>MegaCraft</b> Servidor atualmente está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b></p>
+        	<p><b>MegaCraft</b> O Servidor atualmente está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b></p>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
 	<script src="js/firefly.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery.min.js"></script>
+	<script src="js/jquery.modalLink.min.js"></script>
 </body>
 </html>
