--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="stylesheet" href="css/jquery.modalLink.min.css" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter@1.1.1/dist/mc-player-counter.min.js"></script>
 </head>
@@ -33,7 +32,7 @@
 			</div>
 			</a>
 			<!-- Replace # with your store URL -->
-			<a href="loja.html" class="modal-link" class="item store">
+			<a href="#" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
 				<p class="subtitle">compre seu vip!</p>
@@ -61,7 +60,5 @@
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
 	<script src="js/firefly.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
-	<script src="https://code.jquery.com/jquery.min.js"></script>
-	<script src="js/jquery.modalLink.min.js"></script>
 </body>
 </html>
