--- a/votar.html
+++ b/votar.html
@@ -1,7 +1,6 @@
-<div class="separator" style="clear: both; text-align: center;">
-<a href="https://1.bp.blogspot.com/-29shD3Ndhkc/XwoP-TC5gdI/AAAAAAAAWH8/Wtdriv2Sp_IllIcUa3LKXVV7pQTjPsS-gCLcBGAsYHQ/s1600/vote4rewards-1524708062.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="200" data-original-width="360" height="220" src="https://1.bp.blogspot.com/-29shD3Ndhkc/XwoP-TC5gdI/AAAAAAAAWH8/Wtdriv2Sp_IllIcUa3LKXVV7pQTjPsS-gCLcBGAsYHQ/s400/vote4rewards-1524708062.png" width="400" /></a></div>
-<div class="separator" style="clear: both; text-align: center;">
-</div>
+<p>
+<a href="https://1.bp.blogspot.com/-29shD3Ndhkc/XwoP-TC5gdI/AAAAAAAAWH8/Wtdriv2Sp_IllIcUa3LKXVV7pQTjPsS-gCLcBGAsYHQ/s1600/vote4rewards-1524708062.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="200" data-original-width="360" height="220" src="https://1.bp.blogspot.com/-29shD3Ndhkc/XwoP-TC5gdI/AAAAAAAAWH8/Wtdriv2Sp_IllIcUa3LKXVV7pQTjPsS-gCLcBGAsYHQ/s400/vote4rewards-1524708062.png" width="400" /></a>
+</p>
 <br />
 <br />
 <span style="font-size: large;"><i>Vote e nos ajude a crescer e melhorar cada vez mais a qualidade e a diversão do nosso servidor</i></span><br />
