--- a/votar.html
+++ b/votar.html
@@ -1,5 +1,5 @@
 <p>
-<a href="https://1.bp.blogspot.com/-29shD3Ndhkc/XwoP-TC5gdI/AAAAAAAAWH8/Wtdriv2Sp_IllIcUa3LKXVV7pQTjPsS-gCLcBGAsYHQ/s1600/vote4rewards-1524708062.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="200" data-original-width="360" height="220" src="https://1.bp.blogspot.com/-29shD3Ndhkc/XwoP-TC5gdI/AAAAAAAAWH8/Wtdriv2Sp_IllIcUa3LKXVV7pQTjPsS-gCLcBGAsYHQ/s400/vote4rewards-1524708062.png" width="400" /></a>
+<img border="0" data-original-height="200" data-original-width="360" height="220" src="https://1.bp.blogspot.com/-29shD3Ndhkc/XwoP-TC5gdI/AAAAAAAAWH8/Wtdriv2Sp_IllIcUa3LKXVV7pQTjPsS-gCLcBGAsYHQ/s400/vote4rewards-1524708062.png" width="400" />
 </p>
 <br />
 <br />
