--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 			</a>
 			<!-- Replace # with your vote URL -->
-			<a href="#" class="item vote">
+			<a href="https://megacraft.com.br/votar" target="_blank" class="item vote">
 			<div>
 				<img src="img/vote.png" alt="Minecraft voting icon" class="img">
 				<p class="subtitle">vote no servidor!</p>
