--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</div>
 			</a>
 			<!-- Replace # with your store URL -->
-			<a href="http://loja.megacraft.com.br" target="_blank" class="item store">
+			<a href="https://megacraftserver.tebex.io" target="_blank" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
 				<p class="subtitle">compre seu vip!</p>
