--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 			</a>
 		</div>
-		<div  style="background-color:powderblue;">
+		<div  style="background-color:powderblue; background-size: cover;">
 			<!-- Replace play.myserver.net with your IP address -->
 			<!-- Do it for both examples below -->
 			<!-- Please set both your IP and port -->
