--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
 				<p class="subtitle">vote no servidor!</p>
 				<p class="title">Votar</p>
 			</a>
-		</div>		
+		</div>	
+		<div  style="background-color:powderblue;">
+		<!-- Replace play.myserver.net with your IP address -->
+		<!-- Do it for both examples below -->
+		<!-- Please set both your IP and port -->
+		<p>Venha jogar conosco, <b>jogar.megacraft.com.br</b> e com mais outros
+		<span class="ip" data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p> 	
+        	<p><b>MegaCraft</b> Atualmente está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b></p>
+		</div>
 		</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
 	<script src="js/firefly.js" type="text/javascript"></script>
