--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 				<p class="title">Votar</p>
 			</a>
 		</div>	
-		</div>
-		<br /><div  style="background-color:powderblue; float: center; background-size: auto 100%;">
+		<div  style="background-color:powderblue; position:relative; z-index:10;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
@@ -51,6 +50,7 @@
 		<span class="ip" data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p> 	
         	<p><b>MegaCraft</b> está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b>
 		</p>
+		</div>
 		</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
 	<script src="js/firefly.js" type="text/javascript"></script>
