--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 	<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter@1.1.1/dist/mc-player-counter.min.js"></script>
   	<style type="text/css">
 	divsub {
-   	position: absolute;
-   	z-index: 10; /* Quantidade de DIV`s acima dessa */
+	position: absolute;
+	height: 100vh;
+	z-index: 9999; /* número máximo é 9999 */
 	}
 	</style>	
 </head>
