--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter@1.1.1/dist/mc-player-counter.min.js"></script>
-  	<style type="text/css">
-	divsub {
-	position: absolute;
-	height: 100vh;
-	z-index: 9999; /* número máximo é 9999 */
-	}
-	</style>	
 </head>
 <body>
 	<div class="container">
@@ -49,7 +42,7 @@
 				<p class="title">Votar</p>
 			</a>
 		</div>	
-		<div class="divsub" style="background-color:powderblue;">
+		<div style="background-color:powderblue; height:200px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
