--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<p class="title">Votar</p>
 			</a>
 		</div>	
-		<div style="background-color:powderblue; width:1200px; height:200px;">
+		<div style="background-color:powderblue; width:100%; height:200px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
