--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<p class="title">Votar</p>
 			</a>
 		</div>	
-		<div style="background-color:powderblue; width:1920px; height:200px;">
+		<div style="background-color:#ffffff; width:1920px; height:200px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
@@ -50,6 +50,50 @@
 		<span class="ip" data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p> 	
         	<p><b>MegaCraft</b> está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b>
 		</p>
+		</div>
+		<div style="background-color:powderblue; width:1920px; height:200px;">
+		<!-- Replace play.myserver.net with your IP address -->
+		<!-- Do it for both examples below -->
+		<!-- Please set both your IP and port -->
+		<p>
+		<table>
+		<tbody>
+		<tr>
+		<td>
+		<h2>Economia</h2>
+		O servidor preza por uma economia balanceada. Ganhe dinheiro de vários modos diferentes no servidor.	
+		</td>
+		<td>
+		<h2>Segurança</h2>
+		O nosso servidor tem como principal filosofia a continuação do mapa principal sem pretensão de reset.	
+		</td>
+		<td>
+		<h2>Comunidade</h2>
+		Conheça a família Eternia! Uma comunidade amigável e divertida.	
+		</td>
+		</tr>
+		</tbody>
+		</table>	
+		</p>
+		</div>
+		<div style="background-color:#ffffff; width:1920px; height:200px;">
+		<!-- Replace play.myserver.net with your IP address -->
+		<!-- Do it for both examples below -->
+		<!-- Please set both your IP and port -->
+		<p>
+		<h2>Venha Jogar!</h2>
+		Nosso servidor permanece online 24 horas por dia!<br />
+		Nossa Staff está a maior parte do tempo no servidor para ajudar os jogadores. Sempre que precisar de ajuda, poderá contar com eles.<br /><br />
+		Nosso servidor suporta as versões 1.10, 1.11, 1.12, 1.13, 1.14, 1.15 e 1.16, contas originais e piratas.<br />	
+		</p>
+		</div>
+		<div style="background-color:#635CDB; width:1920px; height:200px;">
+		<!-- Replace play.myserver.net with your IP address -->
+		<!-- Do it for both examples below -->
+		<!-- Please set both your IP and port -->
+		<p><h1>Nossas Qualidades</h1>
+		Nós iremos trabalhar sempre para queo servidor tenha constantes atualizações e esteja online, Staff presente e eventos diários!<br />
+		O nosso servidor tem como principal filosofia a continuação do mapa principal sem pretensão de reset.</p>
 		</div>
 		</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
