--- a/index.html
+++ b/index.html
@@ -51,32 +51,7 @@
         	<p><b>MegaCraft</b> está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b>
 		</p>
 		</div>
-		<div style="background-color:powderblue; width:1920px; height:200px;">
-		<!-- Replace play.myserver.net with your IP address -->
-		<!-- Do it for both examples below -->
-		<!-- Please set both your IP and port -->
-		<p>
-		<table>
-		<tbody>
-		<tr>
-		<td>
-		<h2>Economia</h2>
-		O servidor preza por uma economia balanceada. Ganhe dinheiro de vários modos diferentes no servidor.	
-		</td>
-		<td>
-		<h2>Segurança</h2>
-		O nosso servidor tem como principal filosofia a continuação do mapa principal sem pretensão de reset.	
-		</td>
-		<td>
-		<h2>Comunidade</h2>
-		Conheça a família Eternia! Uma comunidade amigável e divertida.	
-		</td>
-		</tr>
-		</tbody>
-		</table>	
-		</p>
-		</div>
-		<div style="background-color:#ffffff; width:1920px; height:200px;">
+		<div style="background-color:#F8F8F8; width:1920px; height:200px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
