--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
 				<p class="title">Votar</p>
 			</a>
 		</div>	
-		<div style="background-color:#ffffff; width:1920px; height:80px;">
+		<div style="background-color:#ffffff; width:1920px; height:50px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p>Venha jogar conosco, <b>jogar.megacraft.com.br</b> e com mais outros
 		<span class="ip" data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p> 	
-        	<p><b>MegaCraft</b> está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b>
 		</p>
 		</div>
 		<div style="background-color:#F8F8F8; width:1920px; height:200px;">
@@ -61,6 +60,12 @@
 		Nossa Staff está a maior parte do tempo no servidor para ajudar os jogadores. Sempre que precisar de ajuda, poderá contar com eles.<br /><br />
 		Nosso servidor suporta as versões 1.10, 1.11, 1.12, 1.13, 1.14, 1.15 e 1.16, contas originais e piratas.<br />	
 		</p>
+		</div>
+		<div style="background-color:#FFFFFF; width:1920px; height:50px;">
+		<!-- Replace play.myserver.net with your IP address -->
+		<!-- Do it for both examples below -->
+		<!-- Please set both your IP and port -->
+        	<p>Copyright © 2020 <b>MegaCraft</b> está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b>
 		</div>
 		</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
