--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
-		<h3>Venha Jogar!</h3>
+		<p><h3>Venha Jogar!</h3>
 		Nosso servidor permanece online 24 horas por dia!<br />
 		Nossa Staff está a maior parte do tempo no servidor para ajudar os jogadores. Sempre que precisar de ajuda, poderá contar com eles.<br />
 		Nosso servidor suporta as versões 1.10, 1.11, 1.12, 1.13, 1.14, 1.15 e 1.16, contas originais e piratas.		
-		</div>
+		</p></div>
 		<div style="background-color:#FFFFFF; width:1920px; height:30px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
