--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 		<span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p> 	
 		</p>
 		</div>
-		<div style="background-color:#6EC1E4; width:1920px; height:160px;">
+		<div style="background-color:#6EC1E4; width:1920px; height:170px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p><h3>Venha Jogar!</h3>
 		Nosso servidor permanece online 24 horas por dia!	<br />
 		Nossa Staff está a maior parte do tempo no servidor para ajudar os jogadores. Sempre que precisar de ajuda, poderá contar com eles.<br /><br />
-		Nosso servidor suporta as versões 1.10, 1.11, 1.12, 1.13, 1.14, 1.15 e 1.16, contas originais e piratas.<br /><br />	
+		Nosso servidor suporta as versões 1.10, 1.11, 1.12, 1.13, 1.14, 1.15 e 1.16, contas originais e piratas.	
 		</p></div>
 		<div style="background-color:#FEEECC; width:1920px; height:120px;">
 		<!-- Replace play.myserver.net with your IP address -->
