--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
-		<p>Venha jogar conosco, <span class="ip">jogar.megacraft.com.br</span> e com mais outros
+		<p>Venha jogar conosco, <span class="ip"><b>jogar.megacraft.com.br</b></span> e com mais outros
 		<span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p> 	
 		</p>
 		</div>
-		<div style="background-color:#6EC1E4; width:1920px; height:170px;">
+		<div style="background-color:#6EC1E4; width:1920px; height:180px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p><h3>Venha Jogar!</h3>
-		Nosso servidor permanece online 24 horas por dia!	<br />
-		Nossa Staff está a maior parte do tempo no servidor para ajudar os jogadores. Sempre que precisar de ajuda, poderá contar com eles.<br /><br />
+		Nosso servidor permanece online 24 horas por dia, 7 dias por semana!<br />
+		Nossa Staff está sempre trabalhando para ajudar os jogadores. Quando precisar de ajuda, poderá contar conosco.<br /><br />
 		Nosso servidor suporta as versões 1.10, 1.11, 1.12, 1.13, 1.14, 1.15 e 1.16, contas originais e piratas.	
 		</p></div>
 		<div style="background-color:#FEEECC; width:1920px; height:120px;">
@@ -70,7 +70,7 @@
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
-        	<p>Copyright © 2020 <b>MegaCraft</b> está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b>
+        	<p>Copyright © 2020 <b>MegaCraft</b> o Servidor está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b>
 		</div>
 		</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
