--- a/index.html
+++ b/index.html
@@ -59,12 +59,23 @@
 		Nossa Staff está sempre trabalhando para ajudar os jogadores. Quando precisar de ajuda, poderá contar conosco.<br /><br />
 		Nosso servidor suporta as versões 1.10, 1.11, 1.12, 1.13, 1.14, 1.15 e 1.16, contas originais e piratas.	
 		</p></div>
-		<div style="background-color:#FEEECC; width:1920px; height:120px;">
+		<div style="background-color:#FEEECC; width:1920px; height:180px;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
-		<p><h3>Nossas Qualidades!</h3>
-		Nós trabalhamos sempre para que o servidor esteja sempre em constante atualização e o mais importante sempre online!
+		<p>
+		<div class="table">
+ 		<div> <!– div que representa <tr> –>
+   		<div class="td"><h2>> Quais os objetivos no servidor?</h2></div>
+   		<div class="td">O MegaCraft é baseado inteiramente em um survival quase vanilla, isto é, quase sem modificações. Entre e faça amigos, crie suas próprias farms, desenvolva sistemas, fique rico e muito mais!
+		</div>
+  		</div>
+  		<div> <!– div que representa <tr> –>
+   		<div class="td"><h2>>O servidor possui mcMMO, Clans e Pets?</h2></div>
+   		<div class="td">Sim, todos eles! Apesar de ser um survival quase vanilla, temos alguns aditivos para atrair os jogadores! Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui, a diversão não para nunca!
+		</div>
+  		</div>
+		</div>
 		</p></div>	
 		<div style="background-color:#FFFFFF; width:1920px; height:30px;">
 		<!-- Replace play.myserver.net with your IP address -->
