--- a/index.html
+++ b/index.html
@@ -64,18 +64,17 @@
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p>
-		<div class="table">
- 		<div> <!– div que representa <tr> –>
-   		<div class="td"><h2>> Quais os objetivos no servidor?</h2></div>
-   		<div class="td">O MegaCraft é baseado inteiramente em um survival quase vanilla, isto é, quase sem modificações. Entre e faça amigos, crie suas próprias farms, desenvolva sistemas, fique rico e muito mais!
-		</div>
-  		</div>
-  		<div> <!– div que representa <tr> –>
-   		<div class="td"><h2>>O servidor possui mcMMO, Clans e Pets?</h2></div>
-   		<div class="td">Sim, todos eles! Apesar de ser um survival quase vanilla, temos alguns aditivos para atrair os jogadores! Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui, a diversão não para nunca!
-		</div>
-  		</div>
-		</div>
+		<table>
+		<tbody>
+		<tr>
+		<td><h2>> Quais os objetivos no servidor?</h2>
+		O MegaCraft é baseado inteiramente em um survival quase vanilla, isto é, quase sem modificações. Entre e faça amigos, crie suas próprias farms, desenvolva sistemas, fique rico e muito mais!	
+		</td>
+		<td><h2>>O servidor possui mcMMO, Clans e Pets?</h2></td>
+		Sim, todos eles! Apesar de ser um survival quase vanilla, temos alguns aditivos para atrair os jogadores! Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui, a diversão não para nunca!	
+		</tr>
+		</tbody>
+		</table>	
 		</p></div>	
 		<div style="background-color:#FFFFFF; width:1920px; height:30px;">
 		<!-- Replace play.myserver.net with your IP address -->
