--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
 		<table>
 		<tbody>
 		<tr>
-		<td><h2>> Quais os objetivos no servidor?</h2>
-		O MegaCraft é baseado inteiramente em um survival quase vanilla, isto é, quase sem modificações. Entre e faça amigos, crie suas próprias farms, desenvolva sistemas, fique rico e muito mais!	
+		<td><h3>> Quais os objetivos no servidor?</h3>
+		O MegaCraft é baseado inteiramente em um survival quase vanilla, isto é, quase sem modificações.<br />
+		Entre e faça amigos, crie suas próprias farms, desenvolva sistemas, fique rico e muito mais!	
 		</td>
-		<td><h2>>O servidor possui mcMMO, Clans e Pets?</h2></td>
-		Sim, todos eles! Apesar de ser um survival quase vanilla, temos alguns aditivos para atrair os jogadores! Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui, a diversão não para nunca!	
+		<td><h3>>O servidor possui mcMMO, Clans e Pets?</h3></td>
+		Sim, todos eles! Apesar de ser um survival quase vanilla, temos alguns aditivos para atrair os jogadores!<br />
+		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui, a diversão não para nunca!	
 		</tr>
 		</tbody>
 		</table>	
