--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
 		<table>
 		<tbody>
 		<tr>
-		<td><h3>> Quais os objetivos no servidor?</h3>
-		O MegaCraft é baseado inteiramente em um survival quase vanilla, isto é, quase sem modificações.<br />
-		Entre e faça amigos, crie suas próprias farms, desenvolva sistemas, fique rico e muito mais!	
+		<td><b>> Quais os objetivos no servidor?</b><br />
+		<small>O MegaCraft é baseado inteiramente em um survival quase vanilla, isto é, quase sem modificações.<br />
+		Entre e faça amigos, crie suas próprias farms, desenvolva sistemas, fique rico e muito mais!</small>	
 		</td>
-		<td><h3>>O servidor possui mcMMO, Clans e Pets?</h3></td>
-		Sim, todos eles! Apesar de ser um survival quase vanilla, temos alguns aditivos para atrair os jogadores!<br />
-		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui, a diversão não para nunca!	
+		<td><b>>O servidor possui mcMMO, Clans e Pets?</b><br />
+		<small>Sim, todos eles! Apesar de ser um survival quase vanilla, temos alguns aditivos para atrair os jogadores!<br />
+		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui, a diversão não para nunca!</small>
+		</td>
 		</tr>
 		</tbody>
 		</table>	
