--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 		<tbody>
 		<tr>
 		<td><b>> Quais os objetivos no servidor?</b><br />
-		<small>O MegaCraft é baseado inteiramente em um survival quase vanilla, isto é, quase sem modificações.<br />
-		Entre e faça amigos, crie suas próprias farms, desenvolva sistemas, fique rico e muito mais!</small>	
+		<small>O MegaCraft é baseado inteiramente em um survival quase vanilla<br />isto é, quase sem modificações.<br />
+		Entre e faça amigos, crie suas próprias farms, desenvolva sistemas<br />fique rico e muito mais!</small>	
 		</td>
 		<td><b>>O servidor possui mcMMO, Clans e Pets?</b><br />
-		<small>Sim, todos eles! Apesar de ser um survival quase vanilla, temos alguns aditivos para atrair os jogadores!<br />
-		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui, a diversão não para nunca!</small>
+		<small>Sim, todos eles! Apesar de ser um survival quase vanilla<br />temos alguns aditivos para atrair os jogadores!<br />
+		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui<br />a diversão não para nunca!</small>
 		</td>
 		</tr>
 		</tbody>
