--- a/index.html
+++ b/index.html
@@ -64,20 +64,15 @@
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p>
-		<table>
-		<tbody>
-		<tr>
-		<td><b>> Quais os objetivos no servidor?</b><br />
+		<div align="left">
+		<b>> Quais os objetivos no servidor?</b><br />
 		<small>O MegaCraft é baseado inteiramente em um survival quase vanilla<br />isto é, quase sem modificações.<br />
 		Entre e faça amigos, crie suas próprias farms, desenvolva sistemas<br />fique rico e muito mais!</small>	
-		</td>
-		<td><b>>O servidor possui mcMMO, Clans e Pets?</b><br />
+		</div>
+		<div align="right"><b>>O servidor possui mcMMO, Clans e Pets?</b><br />
 		<small>Sim, todos eles! Apesar de ser um survival quase vanilla<br />temos alguns aditivos para atrair os jogadores!<br />
 		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui<br />a diversão não para nunca!</small>
-		</td>
-		</tr>
-		</tbody>
-		</table>	
+		</div>
 		</p></div>	
 		<div style="background-color:#FFFFFF; width:1920px; height:30px;">
 		<!-- Replace play.myserver.net with your IP address -->
