--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p>
-		<div align="left">
+		<div style="float: left; width: 350px;">
 		<b>> Quais os objetivos no servidor?</b><br />
 		<small>O MegaCraft é baseado inteiramente em um survival quase vanilla<br />isto é, quase sem modificações.<br />
 		Entre e faça amigos, crie suas próprias farms, desenvolva sistemas<br />fique rico e muito mais!</small>	
 		</div>
-		<div align="right"><b>>O servidor possui mcMMO, Clans e Pets?</b><br />
+		<div style="float: right; width: 350px;"><b>>O servidor possui mcMMO, Clans e Pets?</b><br />
 		<small>Sim, todos eles! Apesar de ser um survival quase vanilla<br />temos alguns aditivos para atrair os jogadores!<br />
 		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui<br />a diversão não para nunca!</small>
 		</div>
