--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p>
+		<div align="center" style="height:800px;">	
 		<div style="float: left; width: 350px;">
 		<b>> Quais os objetivos no servidor?</b><br />
 		<small>O MegaCraft é baseado inteiramente em um survival quase vanilla<br />isto é, quase sem modificações.<br />
@@ -72,6 +73,7 @@
 		<div style="float: right; width: 350px;"><b>>O servidor possui mcMMO, Clans e Pets?</b><br />
 		<small>Sim, todos eles! Apesar de ser um survival quase vanilla<br />temos alguns aditivos para atrair os jogadores!<br />
 		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui<br />a diversão não para nunca!</small>
+		</div>
 		</div>
 		</p></div>	
 		<div style="background-color:#FFFFFF; width:1920px; height:30px;">
