--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p>
-		<div align="center" style="width:800px;">	
+		<div style="width:800px; float:center;">	
 		<div style="float: left; width: 350px;">
 		<b>> Quais os objetivos no servidor?</b><br />
 		<small>O MegaCraft é baseado inteiramente em um survival quase vanilla<br />isto é, quase sem modificações.<br />
