--- a/index.html
+++ b/index.html
@@ -42,41 +42,15 @@
 				<p class="title">Votar</p>
 			</a>
 		</div>	
-		<div style="background-color:#ffffff; width:1920px; height:30px;">
+		<div style="background-color:#ffffff;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
 		<p>Venha jogar conosco, <span class="ip"><b>jogar.megacraft.com.br</b></span> e com mais outros
 		<span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p> 	
 		</p>
-		</div>
-		<div style="background-color:#6EC1E4; width:1920px; height:180px;">
-		<!-- Replace play.myserver.net with your IP address -->
-		<!-- Do it for both examples below -->
-		<!-- Please set both your IP and port -->
-		<p><h3>Venha Jogar!</h3>
-		Nosso servidor permanece online 24 horas por dia, 7 dias por semana!<br />
-		Nossa Staff está sempre trabalhando para ajudar os jogadores. Quando precisar de ajuda, poderá contar conosco.<br /><br />
-		Nosso servidor suporta as versões 1.10, 1.11, 1.12, 1.13, 1.14, 1.15 e 1.16, contas originais e piratas.	
-		</p></div>
-		<div style="background-color:#FEEECC; width:1920px; height:180px;">
-		<!-- Replace play.myserver.net with your IP address -->
-		<!-- Do it for both examples below -->
-		<!-- Please set both your IP and port -->
-		<p>
-		<div style="width:800px; float:center;">	
-		<div style="float: left; width: 350px;">
-		<b>> Quais os objetivos no servidor?</b><br />
-		<small>O MegaCraft é baseado inteiramente em um survival quase vanilla<br />isto é, quase sem modificações.<br />
-		Entre e faça amigos, crie suas próprias farms, desenvolva sistemas<br />fique rico e muito mais!</small>	
-		</div>
-		<div style="float: right; width: 350px;"><b>>O servidor possui mcMMO, Clans e Pets?</b><br />
-		<small>Sim, todos eles! Apesar de ser um survival quase vanilla<br />temos alguns aditivos para atrair os jogadores!<br />
-		Trabalhamos pra trazer novos plugins exclusivos e melhorar a jogabilidade. Aqui<br />a diversão não para nunca!</small>
-		</div>
-		</div>
-		</p></div>	
-		<div style="background-color:#FFFFFF; width:1920px; height:30px;">
+		</div>	
+		<div style="background-color:#CCCCCC;">
 		<!-- Replace play.myserver.net with your IP address -->
 		<!-- Do it for both examples below -->
 		<!-- Please set both your IP and port -->
