--- a/index.html
+++ b/index.html
@@ -1,64 +1,103 @@
+<!-- Proudly created by ByBilly -->
+<!-- https://www.spigotmc.org/members/blexieking.168027 -->
+<!-- PLEASE LEAVE THIS CREDIT IN -->
+
+<!DOCTYPE html>
 <html>
 <head>
-	<!-- Info meta tags, important for social media + SEO -->
-	<title>Mega Craft - Site Oficial</title>
-	<meta name="description" content="Mega Craft é um novo e incrível servidor Survival de Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
-	<meta property="og:title" content="Mega Craft - Site Oficial">
-	<meta property="og:site_name" content="Mega Craft">
-	<meta property="og:description" content="Mega Craft é um novo e incrível servidor Survival de Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
-	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
-	<meta property="og:url" content="https://bybilly.uk/">
-	<meta name="twitter:card" content="summary_large_image">
+	<title>MyServer - Official Website</title>
+	<meta name="description" content="MyServer is a revolutionary Minecraft server. You can join with the IP 'play.myserver.net'.">
+	<meta name="keywords" content="MyServer, MyServer.net, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/home.css">
+	<script src="https://leonardosnt.github.io/mc-player-counter/dist/mc-player-counter.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter@1.1.1/dist/mc-player-counter.min.js"></script>
+	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 	<div class="container">
-		<div class="logo">
-			<!-- In the img folder, upload your logo -->
-			<!-- Make sure you name it 'logo.png' -->
-			<img src="img/logo.png" alt="Mega Craft">
+		<header>
+			<div class="header">
+				<div class="logo">
+					<!-- In the img folder, upload your logo. -->
+					<!-- Make sure to name it 'logo.png'! -->
+					<a href="/"><img src="img/logo.png" alt="MyServer logo"></a>
+				</div>
+
+				<ul class="nav">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="https://discord.megacraft.com.br" target="_blank">Discord</a></li>
+					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
+					<li><a href="./staff.html">Staff</a></li>
+				</ul>
 		</div>
-		<div class="items">
-			<!-- Replace # with your forum URL-->
-			<a href="http://discord.megacraft.com.br" target="_blank" class="item forums">
-				<img src="img/discord.png" alt="Minecraft forums icon" class="img">
-				<p class="subtitle">entre no discord!</p>
-				<p class="title">Discord</p>
-			</a>
-			<!-- Replace # with your store URL -->
-			<a href="https://loja.megacraft.com.br" target="_blank" class="item store">
-				<img src="img/store.png" alt="Minecraft store icon" class="img">
-				<p class="subtitle">compre seu vip!</p>
-				<p class="title">Loja</p>
-			</a>
-			<!-- Replace # with your vote URL -->
-			<a href="https://megacraft.com.br/votar" target="_blank" class="item vote">
-				<img src="img/vote.png" alt="Minecraft voting icon" class="img">
-				<p class="subtitle">vote no servidor!</p>
-				<p class="title">Votar</p>
-			</a>
-		</div>	
-		<div style="background-color:#ffffff;">
-		<!-- Replace play.myserver.net with your IP address -->
-		<!-- Do it for both examples below -->
-		<!-- Please set both your IP and port -->
-		<p>Venha jogar conosco, <span class="ip"><b>jogar.megacraft.com.br</b></span> e com mais outros
-		<span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p> 	
-		</p>
-		</div>	
-		<div style="background-color:#CCCCCC;">
-		<!-- Replace play.myserver.net with your IP address -->
-		<!-- Do it for both examples below -->
-		<!-- Please set both your IP and port -->
-        	<p>Copyright © 2020 <b>MegaCraft</b> o Servidor está <span data-playercounter-ip="144.217.10.143:25959" data-playercounter-status>...</span> - Capacidade: <b><span data-playercounter-ip="144.217.10.143:25959" data-playercounter-format="{online}/{max}">0</span></b>
+			<h1 class="animate">Bem vindo ao servidor MegaCraft!</h1>
+			<div class="playercount">
+				<!-- Replace play.myserver.net with your IP address! -->
+				<!-- Make sure to do it for both examples below. -->
+				<p>Venha jogar conosco, <b><span class="ip">jogar.megacraft.com.br</span></b> e com mais outros <span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p>
 		</div>
+		</header>
+
+		<div class="main-content">
+			<h2>Sobre nós</h2>
+			<p class="about-text">Venha jogar minecraft no modo sobrevivência com vários outros jogadores! Sobreviva, desafie amigos, faça épicas construções e muito mais!<br />
+			Jogue um modo sobrevivência como você nunca viu antes! Nós estamos mudando a cada dia para trazer o melhor para nossos jogadores.
+			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">jogar.megacraft.com.br</span></b></p>
 		</div>
-	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
+
+		<div class="gradient">
+			<div class="flex-container">
+				<div class="split">
+					<a href="#"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a tincidunt lorem. Donec a mollis diam, posuere venenatis lorem. Vestibulum sit amet risus eros. Nam commodo tortor a nunc tempor, sit amet auctor purus elementum.</p>
+				</div>
+				<div class="split">
+					<a href="#"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a tincidunt lorem. Donec a mollis diam, posuere venenatis lorem. Vestibulum sit amet risus eros. Nam commodo tortor a nunc tempor, sit amet auctor purus elementum.</p>
+				</div>
+				<div class="split">
+					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a tincidunt lorem. Donec a mollis diam, posuere venenatis lorem. Vestibulum sit amet risus eros. Vote for us below!</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="vote-section">
+			<h2>Vote em nós</h2>
+			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda enormemente!</p>
+			<div class="vote-container">
+				<div class="vote">
+					<h2>PlanetMinecraft.com</h2>
+					<a href="#"><button class="vote-btn">Vote Now</button></a>
+				</div>
+				<div class="vote">
+					<h2>MinecraftServers.org</h2>
+					<a href="#"><button class="vote-btn">Vote Now</button></a>
+				</div>
+				<div class="vote">
+					<h2>TopG.org</h2>
+					<a href="#"><button class="vote-btn">Vote Now</button></a>
+				</div>
+				<div class="vote">
+					<h2>Minecraft-MP.com</h2>
+					<a href="#"><button class="vote-btn">Vote Now</button></a>
+				</div>
+			</div>
+		</div>
+
+		<footer>
+			<p>Copyright &copy; MegaCraft 2020</p>
+			<!-- Remove this part below if you want! -->
+			<p style="padding-right: 30px;">Desenvolvido por <a href="https://megacraft.com.br" >MegaCraft</a></p>
+		</footer>
+
+	</div>
 	<script src="js/firefly.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
