--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<!-- Proudly created by ByBilly -->
-<!-- https://www.spigotmc.org/members/blexieking.168027 -->
-<!-- PLEASE LEAVE THIS CREDIT IN -->
-
-<!DOCTYPE html>
 <html>
 <head>
-	<title>MyServer - Official Website</title>
-	<meta name="description" content="MyServer is a revolutionary Minecraft server. You can join with the IP 'play.myserver.net'.">
-	<meta name="keywords" content="MyServer, MyServer.net, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
+	<title>Mega Craft - Site Oficial</title>
+	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
+	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -41,14 +36,12 @@
 				<p>Venha jogar conosco, <b><span class="ip">jogar.megacraft.com.br</span></b> e com mais outros <span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p>
 		</div>
 		</header>
-
 		<div class="main-content">
 			<h2>Sobre nós</h2>
 			<p class="about-text">Venha jogar minecraft no modo sobrevivência com vários outros jogadores! Sobreviva, desafie amigos, faça épicas construções e muito mais!<br />
 			Jogue um modo sobrevivência como você nunca viu antes! Nós estamos mudando a cada dia para trazer o melhor para nossos jogadores.
 			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">jogar.megacraft.com.br</span></b></p>
 		</div>
-
 		<div class="gradient">
 			<div class="flex-container">
 				<div class="split">
@@ -94,7 +87,6 @@
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://megacraft.com.br" >MegaCraft</a></p>
 		</footer>
-
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
