--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="Mega Craft - Site Oficial">
+	<meta property="og:site_name" content="Mega Craft">
+	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
+	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
+	<meta property="og:url" content="https://bybilly.uk/">
+	<meta name="twitter:card" content="summary_large_image">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="css/stylesheet.css">
